aggiunto collector per la versione di toList() method jdk11